lab_3/lab3_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3-ingress
spec:
  type: ClusterIP
  selector:
    app: lab3-ingress
  ports:
  - port: 3000
    targetPort: 3000
